--- a/infra/docker-compose.dev.yml
+++ b/infra/docker-compose.dev.yml
@@ -2,13 +2,13 @@ services:
   next-app:
     container_name: blog
     build:
-      context: .
-      dockerfile: Dockerfile.dev
+      context: ../
+      dockerfile: infra/Dockerfile.dev
     command: ["pnpm", "dev"]
     env_file:
-      - .env
+      - ../.env
     volumes:
-      - ./front:/app
+      - ../front:/app
       - /app/node_modules
     restart: unless-stopped
     ports:
@@ -23,11 +23,11 @@ services:
     image: postgres:15-alpine
     restart: unless-stopped
     env_file:
-      - .env
+      - ../.env
     environment:
-      POSTGRES_USER: $DB_USER
-      POSTGRES_PASSWORD: $DB_PASSWORD
-      POSTGRES_DB: $DB_NAME
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
