--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
-DB_USER=""
-DB_PASSWORD=""
-DB_NAME=""
+#DATABASE CREDENTIALS
+POSTGRES_USER=""
+POSTGRES_PASSWORD=""
+POSTGRES_DB=""
+
+#PGADMIN CREDENTIALS
+PGADMIN_DEFAULT_EMAIL=""
+PGADMIN_DEFAULT_PASSWORD=""
+
+#HOST AND PORT
 DB_HOST=""
 DB_PORT=""
-PG_EMAIL=""
