--- a/infra/docker-compose.dev.yml
+++ b/infra/docker-compose.dev.yml
@@ -24,10 +24,6 @@ services:
     restart: unless-stopped
     env_file:
       - ../.env
-    environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -39,9 +35,8 @@ services:
     restart: unless-stopped
     ports:
       - "8080:80"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: $PG_EMAIL
-      PGADMIN_DEFAULT_PASSWORD: $DB_PASSWORD
+    env_file:
+      - ../.env
     volumes:
       - pgadmin_data:/var/lib/pgadmin
     depends_on:
